--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,26 @@ html {
 .clear {
     clear: both;
 }
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.col {
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.col-full {
+    width: 100%;
+}
+
+.col-half {
+    width: 50%;
+}
+
 /* class được định nghĩa sẵn */
 .text-white {
     color: white !important;
