--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
 
 html {
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
 
 #main {
@@ -147,7 +148,7 @@ html {
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
-    color: white;
+    color: black;
 }
 
 #slider .text-heading {
@@ -158,7 +159,7 @@ html {
 
 #slider .text-description {
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 #content {
