--- a/assets/style.css
+++ b/assets/style.css
@@ -1,484 +1,491 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
-    scroll-behavior: smooth;
+  font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 #main {
-
 }
 
 .clear {
-    clear: both;
+  clear: both;
 }
 
 .row {
-    margin-left: -8px;
-    margin-right: -8px;
+  margin-left: -8px;
+  margin-right: -8px;
 }
 
 /* Một lớp giả clean tiêu chuẩn và nâng cao so với tạo thẻ div */
 .row::after {
-    content: "";
-    display: block;
-    clear: both;
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .col {
-    float: left;
-    padding-left: 8px;
-    padding-right: 8px;
+  float: left;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .col-full {
-    width: 100%;
-    margin-top: 8px;
-    margin-bottom: 16px;
+  width: 100%;
+  margin-top: 8px;
+  margin-bottom: 16px;
 }
 
 .col-half {
-    width: 50%;
+  width: 50%;
 }
 
 /* class được định nghĩa sẵn */
 .text-white {
-    color: white !important;
+  color: white !important;
 }
 
 #header {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 46px;
-    background-color: black;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 46px;
+  background-color: black;
+  z-index: 1;
 }
 
 #nav {
-    display: inline-block;
+  display: inline-block;
 }
 
 #nav li {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 #nav > li > a {
-    color: white;
+  color: white;
 }
 
 #nav li a {
-    text-decoration: none;
-    line-height: 47px;
-    padding: 0 24px;
-    display: block;
-    text-transform: uppercase;
+  text-decoration: none;
+  line-height: 47px;
+  padding: 0 24px;
+  display: block;
+  text-transform: uppercase;
 }
 
 #nav li:hover .subnav {
-    display: block;
+  display: block;
 }
 
 #nav > li:hover > a {
-    background-color: #cccccc;
-    color: black;
+  background-color: #cccccc;
+  color: black;
 }
 
 #nav .subnav {
-    position: absolute;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    display: none;
-    min-width: 160px;
-    top: 100%;
-    left: 0;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: none;
+  min-width: 160px;
+  top: 100%;
+  left: 0;
 }
 
 #nav .subnav li {
-    display: block;
+  display: block;
 }
 
 #nav .subnav a {
-    color: black;
-    padding-left: 17px;
-    line-height: 38px;
+  color: black;
+  padding-left: 17px;
+  line-height: 38px;
 }
 
 #nav .nav-arrow-down {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 #header .search-btn {
-    float: right;
-    line-height: 46px; 
-    padding: 0 16px;
+  float: right;
+  line-height: 46px;
+  padding: 0 16px;
 }
 
 #header .search-btn:hover {
-    background-color: red;
-    cursor: pointer;
+  background-color: red;
+  cursor: pointer;
 }
 #header .search-icon {
-    color: white;
-    font-size: 16px;
-} 
+  color: white;
+  font-size: 16px;
+}
 
 #nav .subnav li:hover a {
-    background-color: #cccccc;
-    color: black;
+  background-color: #cccccc;
+  color: black;
 }
 
 #slider {
-    position: relative;
-    margin-top: 46px;
-    padding-top: 50%;
-    background: url(/assets/img/759464.jpg) top center / cover no-repeat;
+  position: relative;
+  margin-top: 46px;
+  padding-top: 50%;
+  background: url(/assets/img/759464.jpg) top center / cover no-repeat;
 }
 
 #slider .text-content {
-    position: absolute;
-    bottom: 48px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    color: black;
+  position: absolute;
+  bottom: 48px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  color: black;
 }
 
 #slider .text-heading {
-    font-weight: 600;
-    font-size: 24px;
-    margin-bottom: 15px;
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 15px;
 }
 
 #slider .text-description {
-    font-size: 15px;
-    font-weight: 500;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 #content {
-
 }
 
 #content .content-section {
-    width: 800px;
-    margin: auto auto;
-    padding: 64px 0;
+  width: 800px;
+  margin: auto auto;
+  padding: 64px 0;
 }
 
 #content .section-heading {
-    margin-bottom: 17px;
-    font-size: 30px;
-    font-weight: 500;
-    letter-spacing: 4px;
-    text-align: center;
+  margin-bottom: 17px;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-align: center;
 }
 
 #content .section-sub-heading {
-    margin-bottom: 18px;
-    font-size: 15px;
-    font-style: italic;
-    color: #838383;
-    text-align: center;
+  margin-bottom: 18px;
+  font-size: 15px;
+  font-style: italic;
+  color: #838383;
+  text-align: center;
 }
 
 #content .menber-name {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 #content .about-text {
-    font-size: 15px;
-    text-align: justify;
-    line-height: 1.4;
-    margin-bottom: 47px;
+  font-size: 15px;
+  text-align: justify;
+  line-height: 1.4;
+  margin-bottom: 47px;
 }
 
 #content .member-avatar {
-    width: 154px;
-    margin-top: 15px; 
-    border-radius: 5px;
+  width: 154px;
+  margin-top: 15px;
+  border-radius: 5px;
 }
 
 #content .member-item {
-    float: left;
-    margin-bottom: 112px;
-    width: 33.33333%;
-    text-align: center;
+  float: left;
+  margin-bottom: 112px;
+  width: 33.33333%;
+  text-align: center;
 }
 
 /* Tour section */
 .tour-section {
-    background-color: black;
+  background-color: black;
 }
 
 .ticker-list {
-    background-color: white;
-    margin-top: 41px;
+  background-color: white;
+  margin-top: 41px;
 }
 
 .ticker-list li {
-    font-size: 15px;
-    padding: 11px 16px;
-    border-bottom: #dddddd 1px solid;
+  font-size: 15px;
+  padding: 11px 16px;
+  border-bottom: #dddddd 1px solid;
 }
 
 .ticker-list li .sold-out {
-    padding: 3px 8px; 
-    background-color: #F44336;
-    color: #FFFFFF;
-    margin-left: 16px;
+  padding: 3px 8px;
+  background-color: #f44336;
+  color: #ffffff;
+  margin-left: 16px;
 }
 
 .ticker-list li .quantity {
-    float: right;
-    height: 24px;
-    width: 24px;
-    background-color: black;
-    color: white;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 24px;
-    margin-top: -3px;
+  float: right;
+  height: 24px;
+  width: 24px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 24px;
+  margin-top: -3px;
 }
 /* place*/
 .places-list {
-    margin-top: 32px;
-    margin-left: -8px;
-    margin-right: -8px;
-    margin-bottom: 48px;
+  margin-top: 32px;
+  margin-left: -8px;
+  margin-right: -8px;
+  margin-bottom: 48px;
 }
 
 .place-item {
-    float: left;
-    width: 33.33333%;
-    padding: 0 8px;
-    
+  float: left;
+  width: 33.33333%;
+  padding: 0 8px;
 }
 
 .place-img:hover {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 .place-img {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 .place-body-kyo {
-    background-color: #FFFFFF;
-    padding: 16px;
-    padding-top: 61px;
-
+  background-color: #ffffff;
+  padding: 16px;
+  padding-top: 61px;
 }
 
 .place-body-bell {
-    background-color: #FFFFFF;
-    padding: 16px;
-    padding-top: 36px;
-
+  background-color: #ffffff;
+  padding: 16px;
+  padding-top: 36px;
 }
 
 .place-body {
-    background-color: #FFFFFF;
-    padding: 16px;
+  background-color: #ffffff;
+  padding: 16px;
 }
 
 .place-heading {
-    margin-bottom: 18px;
-    font-weight: 600;
+  margin-bottom: 18px;
+  font-weight: 600;
 }
 
 .place-time {
-    margin-bottom: 15px;
-    color: #757575;
+  margin-bottom: 15px;
+  color: #757575;
 }
 
 .place-dsc {
-    margin-bottom: 15px;
-    line-height: 1.4;
+  margin-bottom: 15px;
+  line-height: 1.4;
 }
 
 .place-by-btn:hover {
-    background-color: #cccccc;
-    color: black;
+  background-color: #cccccc;
+  color: black;
 }
 
 .place-by-btn {
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    padding: 11px 16px;
-    display: inline-block;
-    font-weight: 500;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  padding: 11px 16px;
+  display: inline-block;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
 }
 
 .submit-btn {
-    border: none;
-    float: right;
+  border: none;
+  float: right;
 }
 
 .submit-btn {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Contact From */
 .contact-content {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .contact-info {
-    font-size: 18px;
-    line-height: 1.5;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 /* Css nâng cao. Chọn tất cả các class có chữ "ti-" */
 .contact-info i[class*="ti-"] {
-    width: 30px;
-    display: inline-block;
-
+  width: 30px;
+  display: inline-block;
 }
 
 .contact-form {
-    font-size: 15px;
-
+  font-size: 15px;
 }
 
 .contact-form .form-control {
-    padding: 11px;
-    border: 1px solid #cccccc;
-    width: 100%;
+  padding: 11px;
+  border: 1px solid #cccccc;
+  width: 100%;
 }
 
 /* Map section */
 
 .map-section {
-    margin-top: 48px;
+  margin-top: 48px;
 }
 
 .map-section img {
-    /* Width 100% thì ảnh luôn bằng thẻ chứa nó */
-    width: 100%;
-    margin-bottom: 66px;
+  /* Width 100% thì ảnh luôn bằng thẻ chứa nó */
+  width: 100%;
+  margin-bottom: 66px;
 }
 
 #footer {
-    text-align: center;
-    margin-bottom: 80px;
+  text-align: center;
+  margin-bottom: 80px;
 }
 
 .cosials-list {
-    font-size: 21px;
-    margin-bottom: 16px;
+  font-size: 21px;
+  margin-bottom: 16px;
 }
 
 .cosials-list a:hover {
-    color: rgba(0, 0, 0, 0.4);
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .cosials-list a {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.6);
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.6);
 }
 
-.copyright, .copyright a {
-    color: rgba(0, 0, 0, 0.6);
-    font-weight: 500;
-    font-size: 15px;
+.copyright,
+.copyright a {
+  color: rgba(0, 0, 0, 0.6);
+  font-weight: 500;
+  font-size: 15px;
 }
 
 .modal {
-    /* Nổi và căn 4 góc */
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: none;
-    /* Căn giữa chiều cao */
-    align-items: center; 
-    justify-content: center;
-
+  /* Nổi và căn 4 góc */
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  /* Căn giữa chiều cao */
+  align-items: center;
+  justify-content: center;
 }
 
 .open {
-    display: flex;
+  display: flex;
 }
 
 .modal-container {
-    background-color: white;
-    width: 900px;
-    max-width: calc(100% - 32px);
-    min-height: 200px;
-    position: relative;
+  background-color: white;
+  width: 900px;
+  max-width: calc(100% - 32px);
+  min-height: 200px;
+  position: relative;
+  animation: modalFadeIn ease 0.5s;
 }
 
 .modal-body {
-    margin: 16px;
+  margin: 16px;
 }
 
 .modal-label {
-    margin-bottom: 15px;
-    margin-top: 17px;
-    display: block;
+  margin-bottom: 15px;
+  margin-top: 17px;
+  display: block;
 }
 
 .modal-input {
-    width: 100%;
-    padding: 8px;
+  width: 100%;
+  padding: 8px;
 }
 
 .modal-close:hover {
-    background-color: #cccccc;
-    cursor: pointer;
+  background-color: #cccccc;
+  cursor: pointer;
 }
 
 .modal-close {
-    position: absolute;
-    right: 0;
-    padding: 10px 10px;
-    color: white;
+  position: absolute;
+  right: 0;
+  color: white;
+  padding: 10px 15px;
 }
 
 .modal-header {
-    background-color: #009688;
-    display: flex;
-    height: 130px;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    color: white;
-    font-weight: 100;
-    letter-spacing: 4px;
+  background-color: #009688;
+  display: flex;
+  height: 130px;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: white;
+  font-weight: 100;
+  letter-spacing: 4px;
 }
 
 .modal-heading-icon {
-    margin-right: 16px;
-    margin-bottom: 9px;
+  margin-right: 16px;
+  margin-bottom: 9px;
 }
 
 #buy-tickets:hover {
-    background-color: #cccccc;
-    color: black;
+  background-color: #cccccc;
+  color: black;
 }
 
 #buy-tickets {
-    margin-top: 16px;
-    margin-bottom: 33px;
-    padding: 20px;
-    width: 100%;
-    background-color: #009688;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    color: white;
+  margin-top: 16px;
+  margin-bottom: 33px;
+  padding: 20px;
+  width: 100%;
+  background-color: #009688;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  color: white;
 }
 
 .modal-footer {
-    text-align: right;
+  text-align: right;
+}
+
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-140px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
